--- a/css/todo.css
+++ b/css/todo.css
@@ -37,15 +37,16 @@ main {
     rgba(237, 221, 83, 1) 100%
   );
 }
-#nameGreet{
-  margin-top:10px ;
+#nameGreet {
+  margin-top: 10px;
 }
 
 .heading {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
   color: black;
-  padding: 0px 0px 10px 0px ;
-  text-shadow: 4px 3px 0px #7a7a7a;
+  padding: 0px 0px 10px 0px;
+  text-shadow: 0px 0px 5px #09a0e7;
 }
 #taskinput-container {
   position: relative;
@@ -206,15 +207,6 @@ main {
   overflow-wrap: break-word;
   overflow: hidden;
   position: relative;
-  background-image: linear-gradient(to right, #0acffe 0%, #495aff 100%);
-  background: linear-gradient(90deg, #1cb5e0 0%, #000851 100%);
-  background-image: linear-gradient(
-    to right,
-    #f78ca0 0%,
-    #f9748f 19%,
-    #fd868c 60%,
-    #fe9a8b 100%
-  );
   background-image: linear-gradient(to top, #a981bb 9%, #ffc8a9 100%);
   background: linear-gradient(to bottom, #323232 0%, #3f3f3f 40%, #1c1c1c 150%),
     linear-gradient(
@@ -223,6 +215,7 @@ main {
       rgba(0, 0, 0, 0.25) 200%
     );
   background-blend-mode: multiply;
+  box-shadow: 0px 0px 10px 2px #cbce24;
 }
 .task-card > input {
   height: 100%;
@@ -278,48 +271,119 @@ main {
   color: gray;
   opacity: 0.7;
 }
-#controls {
-  position: absolute;
-  bottom: 5px;
-  top: 6px;
-  right: 7px;
-  display: flex;
-  flex-direction: column;
-  gap: 635px;
-}
-.star-container ,.power-container {
+
+.star-container,
+.power-container {
   display: flex;
   align-items: center;
-  justify-content: right; 
+  justify-content: right;
+  position:absolute;
+  right: 10px; 
   /* background-color: #08cb8a; */
 }
-.fa-github, .fa-power-off  {
+.power-container {
+  top: 10px;
+}
+.star-container{
+  bottom: 5px;
+}
+.fa-github,
+.fa-power-off {
   font-size: 25px;
   color: black;
   padding: 10px;
   border-radius: 10px;
 }
- .fa-power-off{
-  color: rgba(0, 255, 255, 0.884);
- }
- .fa-power-off:active{
-  color: red  ;
- }
+.fa-power-off {
+  color: rgb(11, 27, 239);
+}
+.fa-power-off:active {
+  color: red;
+}
 .fa-power-off:hover {
   transition: all 0.3s ease;
   transform: translateY(2px);
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0);
 }
-.star-container p{
+.star-container p {
+
   opacity: 0.9;
   font-family: monospace;
-   pointer-events: auto;
-   color:rgba(0, 0, 0, 0.774)
+  pointer-events: auto;
+  color: rgba(0, 0, 0, 0.774);
 }
 
-#noFilteredTask{
+#noFilteredTask {
   font-family: monospace;
   font-weight: bold;
   font-size: 16px;
   letter-spacing: 1px;
+}
+/*For mobile view ( 0-480px ) */
+@media (max-width: 480px) {
+  main {
+    width: 95%;
+    margin: 10px 0;
+    height: auto;
+  }
+
+  #addtask {
+    width: 80%;
+    font-size: 16px;
+  }
+
+  #filter-section {
+    flex-direction: column;
+    height: auto;
+    width: 90%;
+    gap: 10px;
+  }
+
+  .task-card {
+    width: 90%;
+    font-size: 12px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  #controls {
+    gap: 50px;
+  }
+
+  .fa-github,
+  .fa-power-off {
+    font-size: 20px;
+  }
+}
+/*For Tablets (481-768px) */
+@media (min-width: 481px) and (max-width: 768px) {
+  main {
+    width: 85%;
+  }
+
+  #addtask {
+    width: 75%;
+  }
+
+  #filter-section {
+    width: 85%;
+  }
+
+  .task-card {
+    width: 85%;
+  }
+}
+/*For desktops ( 769px- above ) */
+@media (min-width: 769px) {
+  main {
+    width: 47%;
+  }
+
+  #filter-section {
+    width: 67%;
+  }
+
+  .task-card {
+    width: 67%;
+  }
 }
