--- a/css/todo.css
+++ b/css/todo.css
@@ -330,7 +330,7 @@ main {
   #addtask {
     width: 80%;
     font-size: 16px;
-    margin: 10px;
+    margin-right: 10px;
   }
 
   #filter-section {
