--- a/css/todo.css
+++ b/css/todo.css
@@ -42,7 +42,8 @@ main {
 }
 
 .heading {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   text-align: center;
   color: black;
   padding: 0px 0px 10px 0px;
@@ -277,14 +278,14 @@ main {
   display: flex;
   align-items: center;
   justify-content: right;
-  position:absolute;
-  right: 10px; 
+  position: absolute;
+  right: 10px;
   /* background-color: #08cb8a; */
 }
 .power-container {
   top: 10px;
 }
-.star-container{
+.star-container {
   bottom: 5px;
 }
 .fa-github,
@@ -306,7 +307,6 @@ main {
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0);
 }
 .star-container p {
-
   opacity: 0.9;
   font-family: monospace;
   pointer-events: auto;
@@ -332,7 +332,10 @@ main {
     font-size: 16px;
     margin-right: 10px;
   }
-
+  #todo-container {
+    height: auto;
+    overflow: visible; /* 🔑 Avoid clipping or double scrolls */
+  }
   #filter-section {
     flex-direction: column;
     height: auto;
