--- a/css/todo.css
+++ b/css/todo.css
@@ -324,13 +324,13 @@ main {
   }
 
   #addtask {
-    width: 80%;
+    width: 85vw;
     font-size: 16px;
-    margin-right: 50px; /*ADDED*/
+    /* background-color: #1c1c1c; */
   }
 
   #filter-section {
-    flex-direction: column;
+    flex-direction: row;
     height: auto;
     width: 90%;
     gap: 10px;
