--- a/css/todo.css
+++ b/css/todo.css
@@ -55,7 +55,7 @@ main {
 #addtask {
   height: 50px;
   width: 440px;
-  padding: 10px;
+  padding: 0px 50px 0px 10px;
   outline: none;
   border: none;
   border-radius: 30px;
@@ -74,7 +74,7 @@ main {
   color: black;
 }
 #addbtn {
-  margin-left: 10px;
+  margin-left: 25px;
   height: 40px;
   width: 40px;
   outline: none;
