fixed the size of input field in the todo card in mobile view

--- a/css/todo.css
+++ b/css/todo.css
@@ -342,6 +342,9 @@ main {
     flex-direction: column;
     align-items: flex-start;
   }
+.task-card > input {
+  width: 72%;
+}
 
   .fa-github,
   .fa-power-off {
